Inclusao da rota user
