# openapi-appengine.yaml
@@ -14,9 +14,6 @@ paths:
       description: Get the csv file from storage
       operationId: csv
       parameters: 
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token
@@ -36,9 +33,6 @@ paths:
       description: Uploads de CSV file to the storage
       operationId: csv
       parameters: 
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token
@@ -59,9 +53,6 @@ paths:
       description: Lists all csv files within a company
       operationId: csv_list
       parameters: 
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token  
@@ -79,9 +70,6 @@ paths:
       description: Creates a new config in the company
       operationId: config
       parameters: 
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token
@@ -101,9 +89,6 @@ paths:
       description: Get last config
       operationId: config
       parameters:
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token
@@ -121,9 +106,6 @@ paths:
       description: Creates the output csv containing the builded parameters and urls
       operationId: build
       parameters: 
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token   
@@ -144,9 +126,6 @@ paths:
       description: Creates the input csv file template
       operationId: template
       parameters: 
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token  
@@ -162,15 +141,27 @@ paths:
       description: Creates new API Token
       operationId: "register"
       parameters: 
-        - name: company
-          in: headers
-          description: Name of the company
         - name: token
           in: headers
           description: API token  
         - name: permission
           in: headers
           description: permission to new user
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: string
+        500:
+          description: "Internal server error"
+  "/user":
+    get:
+      description: Get User credentials
+      operationId: "user"
+      parameters: 
+        - name: token
+          in: headers
+          description: API token
       responses:
         200:
           description: "Success"
