# src/ts/models/RoutesPermission.ts
@@ -11,7 +11,13 @@ export class RoutesPermission {
 
 	public validatePermission(auth: Auth): boolean {
 		const agencyPostRoutes = ['/build/.*', '/csv'];
-		const agencyGetRoutes = ['/config', '/template', '/csv/list', '/csv'];
+		const agencyGetRoutes = [
+			'/config',
+			'/template',
+			'/csv/list',
+			'/csv',
+			'/user',
+		];
 		if (auth.permission === 'agency') {
 			if (this._method === 'POST') {
 				return (
